Adjust item height and fix spacing in compoennt

--- a/src/components/Item/Item.scss
+++ b/src/components/Item/Item.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: 150px;
   padding: 10px;
   color: #F9F9F9;
   .item-name {
